--- a/MicroRabbit/MicroRabbit.Banking.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Banking.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BankingDbConnection": "Data Source=localhost;Initial Catalog=BankingDB;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
