--- a/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
+++ b/MicroRabbit/MicroRabbit.Transfer.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TransferDbConnection": "Data Source=localhost;Initial Catalog=TransferDB;Integrated Security=True;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
